# OOP-labs

./: CMakeLists.txt  README.md
solutions/lab1/: main.cpp
solutions/lab1/src/: solution.cpp  solution.h
solutions/lab1/tests/: tests.cpp
solutions/lab2/: main.cpp
solutions/lab2/src/: solution.cpp  solution.h
solutions/lab2/tests/: tests.cpp
solutions/lab3/: main.cpp
solutions/lab3/src/: solution.cpp  solution.h
solutions/lab3/tests/: tests.cpp
solutions/lab4/: main.cpp
solutions/lab4/src/: solution.h
solutions/lab4/tests/: tests.cpp
solutions/lab5/: main.cpp
solutions/lab5/src/: solution.cpp
solutions/lab5/tests/: tests.cpp
solutions/lab6/: main.cpp
solutions/lab6/src/: bear.cpp  bear.h  factory.cpp  factory.h  npc.cpp  npc.h  observers.h  visitor.cpp  vup.cpp  vup.h  vykhuhol.cpp  vykhuhol.h
solutions/lab6/tests/: tests.cpp
solutions/lab7/: main.cpp
solutions/lab7/src/: bear.cpp  bear.h  common.h  fight_manager.h  npc.cpp  npc.h  observers.cpp  observers.h  visitor.cpp  visitor.h  vup.cpp  vup.h  vykhuhol.cpp  vykhuhol.h
solutions/lab7/tests/: tests.cpp
